# crisp

./: .gitignore  .gitmodules  README.md  README.md.orig
.github/workflows/: rust.yml
cisp/: Makefile  README.md  error_handling.c  json_parsing.c  parsing.c  prompt.c  q_expressions.c  s_expressions.c  uncrustify_config  variables.c
rusp/: Cargo.toml  binding.rs  binding_reference.rs  build.rs
rusp/examples/: generated.rs  q_expr_generated.rs  s_expr_generated.rs
rusp/mpc/: Makefile  mpc.h
rusp/src/: main.rs
