[package]
name = "rusp"
version = "0.1.0"
build = "build.rs"
authors = ["Rafael Bachmann <triolenzunge@gmail.com>"]
edition = "2021"

[build-dependencies]
bindgen = "0.59.2"
cc = "1.0.73"

[dependencies]
rustyline = "9.1.2"
libc = "0.2.121"

# LeakSanitizer doesn't work reliably with opt-level=0
[profile.dev]
opt-level = 1
