[package]
name = "rusp"
version = "0.1.0"
build = "build.rs"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
edition = "2021"

[build-dependencies]
bindgen = "0.61.0"
cc = "1.0.74"

[dependencies]
rustyline = "10.0.0"
libc = "0.2.137"

# LeakSanitizer doesn't work reliably with opt-level=0
[profile.dev]
opt-level = 1
